src/objects/UniqueEntry__Scanned_Field__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Importance__c</fullName>
        <label>Importance</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Number_of_Characters__c</fullName>
        <label>Number of Characters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Scanned_Field_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scanned Field Config Name</label>
        <referenceTo>UniqueEntry__Scanned_Field_Config__c</referenceTo>
        <relationshipLabel>Scanned Fields</relationshipLabel>
        <relationshipName>Scanned_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scanned Fields Name</label>
    <nameField>
        <label>Scanned Fields Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scanned Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>